// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadStatus displays complete icon when progress is 1 1`] = `
<View
  accessibilityLabel="Upload Complete"
  accessible={true}
  style={
    [
      [
        {
          "justifyContent": "center",
        },
        {
          "height": 65,
        },
      ],
    ]
  }
>
  <View
    collapsable={false}
    entering={
      InnerKeyframe {
        "build": [Function],
        "definitions": {
          "0": {
            "opacity": 0,
          },
          "100": {
            "opacity": 0,
          },
          "40": {
            "opacity": 1,
          },
        },
        "durationV": 2000,
        "reduceMotionV": "system",
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    testID="UploadIcon.complete.undefined"
  >
    <View
      style={
        [
          [
            {
              "width": 44,
            },
          ],
        ]
      }
    >
      <View
        style={
          [
            [
              {
                "alignItems": "center",
              },
              {
                "justifyContent": "center",
              },
              {
                "width": 44,
              },
              {
                "height": 44,
              },
            ],
          ]
        }
        testID="UploadStatus.Complete"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#74AC00",
                "fontSize": 28,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UploadStatus displays progress bar when progress is greater than 5% 1`] = `
<View
  accessibilityLabel="Upload 50 percent complete"
  accessible={true}
  style={
    [
      [
        {
          "justifyContent": "center",
        },
        {
          "height": 65,
        },
      ],
    ]
  }
>
  <View
    style={
      [
        [
          {
            "width": 44,
          },
        ],
      ]
    }
  >
    <View
      accessibilityLabel="Upload in progress"
      style={
        [
          [
            {
              "alignItems": "center",
            },
            {
              "justifyContent": "center",
            },
            {
              "width": 44,
            },
            {
              "height": 44,
            },
            {
              "justifyContent": "center",
            },
            {
              "alignItems": "center",
            },
          ],
        ]
      }
      testID="UploadIcon.progress.undefined"
    >
      <View
        style={
          [
            [
              {
                "position": "absolute",
              },
            ],
          ]
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#454545",
                "fontSize": 15,
              },
              null,
              {
                "fontFamily": "INatIcon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
      <CircularProgress
        activeStrokeColor="#454545"
        activeStrokeWidth={2.5}
        inActiveStrokeOpacity={0}
        maxValue={1}
        radius={18}
        showProgressValue={false}
        testID="UploadStatus.CircularProgress"
        value={0.5}
      />
    </View>
  </View>
</View>
`;
